; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_variables.c_AddCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_variables.c_AddCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_11__*, i32 }
%struct.TYPE_10__ = type { %struct.TYPE_11__*, %struct.TYPE_11__* }
%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [52 x i8] c"cannot add callback %p to nonexistent variable '%s'\00", align 1
@vlc_value_callback = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, %struct.TYPE_11__*, i64)* @AddCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AddCallback(i32* %0, i8* %1, %struct.TYPE_11__* noalias %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca %struct.TYPE_11__**, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.TYPE_11__* %2, %struct.TYPE_11__** %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @assert(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call %struct.TYPE_9__* @vlc_internals(i32* %14)
  store %struct.TYPE_9__* %15, %struct.TYPE_9__** %10, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call %struct.TYPE_10__* @Lookup(i32* %16, i8* %17)
  store %struct.TYPE_10__* %18, %struct.TYPE_10__** %9, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %20 = icmp eq %struct.TYPE_10__* %19, null
  br i1 %20, label %21, label %33

21:                                               ; preds = %4
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  %24 = call i32 @vlc_mutex_unlock(i32* %23)
  %25 = load i32*, i32** %5, align 8
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @msg_Err(i32* %25, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i32 %28, i8* %29)
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %32 = call i32 @free(%struct.TYPE_11__* %31)
  br label %56

33:                                               ; preds = %4
  %34 = load i32*, i32** %5, align 8
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %36 = call i32 @WaitUnused(i32* %34, %struct.TYPE_10__* %35)
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* @vlc_value_callback, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %33
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 1
  store %struct.TYPE_11__** %42, %struct.TYPE_11__*** %11, align 8
  br label %46

43:                                               ; preds = %33
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %45 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %44, i32 0, i32 0
  store %struct.TYPE_11__** %45, %struct.TYPE_11__*** %11, align 8
  br label %46

46:                                               ; preds = %43, %40
  %47 = load %struct.TYPE_11__**, %struct.TYPE_11__*** %11, align 8
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %47, align 8
  %49 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %50 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %49, i32 0, i32 0
  store %struct.TYPE_11__* %48, %struct.TYPE_11__** %50, align 8
  %51 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %52 = load %struct.TYPE_11__**, %struct.TYPE_11__*** %11, align 8
  store %struct.TYPE_11__* %51, %struct.TYPE_11__** %52, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %54 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %53, i32 0, i32 0
  %55 = call i32 @vlc_mutex_unlock(i32* %54)
  br label %56

56:                                               ; preds = %46, %21
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local %struct.TYPE_9__* @vlc_internals(i32*) #1

declare dso_local %struct.TYPE_10__* @Lookup(i32*, i8*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1

declare dso_local i32 @msg_Err(i32*, i8*, i32, i8*) #1

declare dso_local i32 @free(%struct.TYPE_11__*) #1

declare dso_local i32 @WaitUnused(i32*, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
